# VulkanSDLApp

./: .gitignore  CMakeLists.txt
src/: Main.cpp  Main.h  vk_mem_alloc.h
src/Shaders/: Triangle.frag  Triangle.frag.hlsl  Triangle.vert  Triangle.vert.hlsl
util/: GenerateShaderBytecode.py
